--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "ava": "^0.14.0",
     "babel-cli": "^6.7.5",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-transform-react-require": "^1.0.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
